--- a/src/components/ProductCard.css
+++ b/src/components/ProductCard.css
@@ -2,7 +2,7 @@
     border: 1px solid #ddd;
     border-radius: 8px;
     overflow: hidden;
-    background-color: #fff;
+    background-color: #ffefef;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     transition: transform 0.2s ease-in-out;
     width: 100%;
@@ -20,17 +20,17 @@
 }
 
 .product-details {
-    padding: 16px;
+    padding: 5px 10px;
 }
 
 .product-name {
     font-size: 1.2em;
-    margin: 8px 0;
+    margin: 5px 0;
 }
 
 .product-brand {
     color: #666;
-    margin-bottom: 8px;
+    margin-bottom: 5px;
 }
 
 .product-info {
@@ -42,7 +42,7 @@
 
 .product-mrp {
     text-decoration: line-through;
-    color: #999;
+    color: #ff0000;
     margin-right: 8px;
 }
 
@@ -55,6 +55,16 @@
     font-size: 0.9em;
     color: #888;
 }
+.product-discounted-price{
+    color: rgb(0, 255, 128);
+    font-weight: bold;
+}
+.buttons{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
 
 @media (max-width: 768px) {
     .product-card {
@@ -62,3 +72,4 @@
         
     }
 }
+
