--- a/src/components/Style.css
+++ b/src/components/Style.css
@@ -1,4 +1,3 @@
-
 .header {
     background-color: rgb(37,37,37);
     height: 60px;
@@ -10,6 +9,7 @@
     top: 0;
     position: fixed;
     width: 100vw;
+    z-index: 100;
 }
 
 .header-button {
