--- a/src/components/Login.css
+++ b/src/components/Login.css
@@ -10,8 +10,7 @@
     border: 1px solid rgba(255, 255, 255, 0.3);
     padding: 2rem;
     max-width: 400px;
-    margin: auto; 
-    margin-top: 200px;
+    margin: 200px auto; 
     width: 70vw;
     text-align: center;
   }
