--- a/src/components/Style.css
+++ b/src/components/Style.css
@@ -49,7 +49,7 @@
     padding: 10px 20px;
     margin-top: 65px;
     background-color: white;
-    color: red;
+    color: rgb(221, 32, 44);
     position: relative;
 }
 
