--- a/src/components/ProductCard.css
+++ b/src/components/ProductCard.css
@@ -56,7 +56,7 @@
     color: #888;
 }
 .product-discounted-price{
-    color: rgb(0, 255, 128);
+    color: green;
     font-weight: bold;
 }
 .buttons{
