--- a/src/components/Login.css
+++ b/src/components/Login.css
@@ -2,7 +2,7 @@
 
 
   .login-container {
-    background: rgba(255, 255, 255, 0.603);
+    background: #f9f9f9;
     border-radius: 16px;
     box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
     backdrop-filter: blur(10px);
