--- a/src/components/Prelogin.css
+++ b/src/components/Prelogin.css
@@ -3,12 +3,12 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin: 100px auto;
+    margin:  auto;
     
 }
 
 .preloginCont div:nth-of-type(2){
-    background: rgba(255, 255, 255, 0.603);
+    background: #f9f9f9;
     border-radius: 16px;
     box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
     backdrop-filter: blur(10px);
