--- a/src/components/Style.css
+++ b/src/components/Style.css
@@ -168,3 +168,29 @@ h2{
 .scroll-container::-webkit-scrollbar-thumb:hover {
     background: #555; 
 }
+.fixed-buttons {
+    position: fixed;
+    bottom: 10px; /* Distance from the bottom of the viewport */
+    right: 10px; /* Distance from the right side of the viewport */
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end; /* Align buttons to the right */
+    z-index: 10000;
+  }
+  
+  .addproduct, .admin-tools {
+    background-color: brown;
+    color: white;
+    border: none;
+    height: 50px;
+    width: 150px;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 16px;
+    
+  }
+  
+  .addproduct:hover, .admin-tools:hover {
+    background-color: #0056b3;
+  }
+  
