--- a/src/components/ProductCard.css
+++ b/src/components/ProductCard.css
@@ -2,7 +2,7 @@
     border: 1px solid #ddd;
     border-radius: 8px;
     overflow: hidden;
-    background-color: #f9f9f9;
+    background-color: #000;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     transition: transform 0.2s ease-in-out;
     width: 100%;
@@ -13,15 +13,8 @@
     transform: translateY(-5px);
 }
 
-.product-image {
-    width: 100%;
-    height: auto;
-    border-bottom: 1px solid #ddd;
-}
 
-.product-details {
-    padding: 5px 10px;
-}
+
 
 .product-name {
     font-size: 1.2em;
@@ -71,3 +64,27 @@
     }
 }
 
+.product-image-gallery {
+    display: flex;
+    overflow-x: auto; /* Enable horizontal scrolling */
+    white-space: nowrap; /* Prevent wrapping of items */
+    scroll-snap-type: x mandatory; /* Optional: for snapping behavior */
+}
+
+.product-image-gallery::-webkit-scrollbar-thumb {
+    background: #888; 
+    border-radius: 4px;
+}
+.product-image-gallery::-webkit-scrollbar-thumb:hover {
+    background: #555; 
+}
+.product-image-gallery::-webkit-scrollbar {
+    height: 8px;
+}
+
+.product-image {
+    flex-shrink: 0; /* Prevent images from shrinking */
+    width: 80%; /* Ensure images fit within their container */
+    height: auto; /* Maintain aspect ratio */
+    scroll-snap-align: start; 
+}
