--- a/src/components/ProductCard.css
+++ b/src/components/ProductCard.css
@@ -88,3 +88,16 @@
     height: auto; /* Maintain aspect ratio */
     scroll-snap-align: start; 
 }
+.color-button {
+    border: none;
+    color: white;
+    padding: 10px;
+    margin: 5px;
+    cursor: pointer;
+    border-radius: 5px;
+  }
+  
+  .color-button.selected {
+    border: 2px solid black;
+  }
+  
