--- a/src/components/ProductCard.css
+++ b/src/components/ProductCard.css
@@ -32,24 +32,16 @@
 }
 
 .product-mrp {
-    text-decoration: line-through;
     color: #ff0000;
     margin-right: 8px;
 }
 
-.product-discount {
-    color: #e91e63;
-    font-weight: bold;
-}
 
-.product-sizes {
+.product-sizes .product-material .product-gender {
     font-size: 0.9em;
     color: #888;
 }
-.product-discounted-price{
-    color: green;
-    font-weight: bold;
-}
+
 .buttons{
     display: flex;
     justify-content: space-around;
