--- a/src/components/Admin/PendingOrders.css
+++ b/src/components/Admin/PendingOrders.css
@@ -1,6 +1,7 @@
 /* PendingOrders.css */
 .pending-orders {
     padding: 20px;
+    color:#36454f;
   }
   
   .customer-orders {
@@ -17,6 +18,7 @@
     border: 1px solid #ccc;
     border-radius: 4px;
     background-color: #fff;
+    color:#36454f
     
   }
   .order-item-details{
