--- a/src/components/ProductCard.css
+++ b/src/components/ProductCard.css
@@ -2,7 +2,7 @@
     border: 1px solid #ddd;
     border-radius: 8px;
     overflow: hidden;
-    background-color: #000;
+    background-color: #ffff;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     transition: transform 0.2s ease-in-out;
     width: 100%;
@@ -35,7 +35,7 @@
 
 .product-sizes .product-material .product-gender {
     font-size: 0.9em;
-    color: #888;
+    color: #000;
 }
 
 .buttons{
