--- a/src/index.css
+++ b/src/index.css
@@ -5,14 +5,14 @@
 
   color-scheme: light dark;
   letter-spacing: 1px;
-  background-color: #242424;
+  background-color: #c5c5c5;
 
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  margin-top: 80px;
+  margin-top: 70px;
 }
 
 a {
