--- a/src/components/Category.css
+++ b/src/components/Category.css
@@ -1,46 +1,23 @@
 .category-container {
-    text-align: center;
-    margin: 20px;
-  }
-  
-  .category-buttons {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 20px;
-    margin-bottom: 20px;
-  }
-  
-  .category-buttons button {
-    margin: 0 10px;
-    padding: 10px 20px;
-    font-size: 16px;
-    cursor: pointer;
-  }
-  
-  .grid-container {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    gap: 20px;
-  }
-  
-  .grid-item {
-    border: 1px solid #ccc;
-    padding: 20px;
-    text-align: center;
-  }
-  
-  .grid-item img {
-    max-width: 100%;
-    height: auto;
-  }
-  
-  .grid-item h3 {
-    margin-top: 10px;
-  }
+  width: 100%;
+  overflow-x: auto; /* Enable horizontal scrolling */
+}
 
-  @media (width >=  700px) {
-    .category-buttons{
-      grid-template-columns: repeat(4,1fr);
-    }
-  }
-  
+.category-list {
+  display: flex;
+  flex-wrap: nowrap; /* Prevent wrapping */
+  padding: 10px;
+}
+
+.category-item {
+  display: inline-block;
+  padding: 10px;
+  margin-right: 10px;
+  color: #36454f;
+  font-weight: bold;
+  border: 1.5px solid rgb(221, 32, 44);
+  border-radius: 4px;
+  white-space: nowrap; /* Prevent text wrapping */
+  overflow: hidden; /* Hide overflow text */
+  text-overflow: ellipsis; /* Add ellipsis for overflow text */
+}
