--- a/src/components/BrandScroller.css
+++ b/src/components/BrandScroller.css
@@ -1,12 +1,20 @@
+.brand-cont{
+  background-color: white;
+  padding: 5px;
+}
 .brand-container {
     display: flex;
     overflow-x: auto;
     white-space: nowrap;
     padding: 10px;
-    border: 1px solid #ccc;
     scroll-behavior: smooth;
+    color: rgb(221, 32, 44);
+    font-weight: bold;
   }
-  
+  h3{
+    color: rgb(221, 32, 44);
+    padding-left: 10px;
+  }
   .brand-card {
     flex: 0 0 auto;
     margin-right: 15px;
