--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
 
   color-scheme: light dark;
   letter-spacing: 1px;
-  background-color: #c5c5c5;
+  background-color: white;
 
 
   font-synthesis: none;
