--- a/src/components/Cart.css
+++ b/src/components/Cart.css
@@ -8,6 +8,7 @@
   .cart-item {
     display: flex;
     align-items: center;
+    flex-direction: row;
     margin-bottom: 20px;
     color: black;
     
@@ -23,6 +24,7 @@
   .cart-item-details {
     flex: 1;
     display: flex;
+    flex-direction: column;
     
   }
   
