changed some more styles

--- a/src/components/Style.css
+++ b/src/components/Style.css
@@ -124,6 +124,14 @@
     
     
 }
+.brand-name{
+    font-size: 27px;
+    font-weight: 500;
+    vertical-align: middle;
+}
+img{
+    vertical-align: middle;
+}
 
 h2{
     color: rgb(221, 32, 44);
