--- a/src/components/Category.css
+++ b/src/components/Category.css
@@ -11,7 +11,6 @@
 }
 
 .category-item {
-  display: inline-block;
   padding: 10px;
   margin-right: 10px;
   color: #36454f;
@@ -19,4 +18,9 @@
   border: 1.5px solid rgb(221, 32, 44);
   border-radius: 4px;
   white-space: nowrap; /* Prevent text wrapping */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+
 }
