--- a/src/components/Category.css
+++ b/src/components/Category.css
@@ -1,11 +1,12 @@
 
 
 .category-list {
-  width: 90%;
+  width: 100%;
   display: flex;
   flex-wrap: nowrap; /* Prevent wrapping */
   white-space: nowrap;
   padding: 10px;
+  margin: 10px 0;
   overflow-x: auto;
   scroll-snap-type: x mandatory;
 }
