--- a/src/components/Category.css
+++ b/src/components/Category.css
@@ -33,3 +33,10 @@ body {
   scroll-behavior: smooth;
   -webkit-overflow-scrolling: touch;
 }
+
+h3{
+  margin-bottom: 20px;
+  text-align: center;
+  font-size: 1.2rem;
+  font-weight: bold;
+}
