--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,15 @@
   font-optical-sizing: auto;
 }
 
+/* Importing Downloaded Font */
+@font-face {
+  font-family: 'AL_Nevada';
+  src: url('./assets//fonta/Al-navrada/AL_Nevrada.otf') format('opentype'),
+       url('./assets/fonts/AL_Nevada_PersonalUseOnly.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
 a {
   font-weight: 500;
   text-decoration: inherit;
